Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.CS

            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ListPostRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_ListPostRd(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ListPostWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_ListPostWr(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ListPreRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_ListPreRd(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ListPreWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_ListPreWr(UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ListStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ListStatus(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ModeIsBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ModeIsBC(UInt16 chanflag);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ModeIsMon@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ModeIsMon(UInt16 chanflag);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ModeIsNotBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ModeIsNotBC(UInt16 chanflag);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ModeIsNotMon@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ModeIsNotMon(UInt16 chanflag);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ModeIsNotPlay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ModeIsNotPlay(UInt16 chanflag);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ModeIsNotRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ModeIsNotRT(UInt16 chanflag);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ModeIsNotSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ModeIsNotSerial(UInt16 chanflag);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ModeIsPlay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ModeIsPlay(UInt16 chanflag);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ModeIsRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ModeIsRT(UInt16 chanflag);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_ModeIsSerial@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ModeIsSerial(UInt16 chanflag);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MonConfigEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MonConfigEx(UInt32 configval, UInt32 moncount, UInt16 cardnum, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MonFilterSAEx@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MonFilterSAEx(Int32 rtlink, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_MsgCheck(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgCommRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgCommRd(ref MSGFIELDSEBR buf, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgCommWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgCommWr(ref MSGFIELDSEBR buf, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgConfig(UInt32 configval, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgConfigEx(UInt32 configval, UInt16 cwd, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgCWDLinkRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_MsgCWDLinkRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgCWDLinkWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgCWDLinkWr(UInt16 cwdlink, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgCWDRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_MsgCWDRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgCWDWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgCWDWr(UInt16 cwd, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgErrorRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_MsgErrorRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgErrorWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgErrorWr(UInt16 value, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgFlagRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_MsgFlagRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgFlagWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgFlagWr(UInt16 msgflag, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgIsAccessed@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_MsgIsAccessed(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgOptRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_MsgOptRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgOptWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgReset@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgReset(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgResetEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_MsgResetEx(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgSWDLinkRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_MsgSWDLinkRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_MsgSWDRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_MsgSWDRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_PlayClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_PlayClear(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_PlayConfigEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_PlayConfigEx(UInt32 configval, UInt32 playcount, UInt32 rtlinkmask, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_PlayCounterWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_PlayCounterWr(UInt32 totalcount, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_PlayStatusEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_PlayStatusEx(ref UInt32 totalcount, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_PlayWrEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_PlayWrEx(UInt16[] buf, UInt16 bufcount, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTConfigEx(UInt32 configval, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTConfigExx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTConfigExx(UInt32 configval, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTCreateListEx@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_RTCreateListEx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 rtlink, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTCreateListExx@40", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_RTCreateListExx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 rtlink, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTResponseTimeRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTResponseTimeRd(ref UInt16 timeval, Int32 rtlink, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR.DLL", EntryPoint = "_BTIEBR_RTResponseTimeWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_RTResponseTimeWr(UInt16 timeval, Int32 rtlink, Int32 channum, IntPtr handleval);
